Adiciona nome completo no titulo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Meu Portifólio</title>
 </head>
 <body>
+    <div>
+        <h1>Rafael Germano de Paula Silva</h1>
+    </div>
     
 </body>
 </html>
