Adicionado Imagem de perfil

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div>
         <h1>Rafael Germano de Paula Silva</h1>
+        <img src="./imagem/IMG_2228.JPG" alt="Minha foto">
     </div>
     
 </body>
