--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 <body>
     <div>
         <h1>Rafael Germano de Paula Silva</h1>
-        <img src="./imagem/IMG_2228.JPG" alt="Minha foto">
+        <img src="./imagem/IMG_2228.JPG" alt="Minha foto" width= 200px>
+        <h2>Descrição</h2>
+        <p>Brasileiro, nascido em Belo horizonte Minas Gerais,
+             cursa Analise e Desenvolvimento de sistemas na UNA,
+              e mais recentemente estudante na Trybe.</p>
+
+        
     </div>
     
 </body>
