Adicionado habilidades e negrito e italico

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
         <h1>Rafael Germano de Paula Silva</h1>
         <img src="./imagem/IMG_2228.JPG" alt="Minha foto" width= 200px>
         <h2>Descrição</h2>
-        <p>Brasileiro, nascido em Belo horizonte Minas Gerais,
+        <p><em>Brasileiro, nascido em Belo horizonte Minas Gerais,
              cursa Analise e Desenvolvimento de sistemas na UNA,
-              e mais recentemente estudante na Trybe.</p>
+              e mais recentemente estudante na Trybe.<em></p>
+        <div>
+            <h2>Habilidades</h2>
+            <ul>
+                <li><strong>Organização</strong></li>
+                <li><strong>Colaboração</strong></li>
+                <li>Comunicação assertiva</li>
+            </ul>
+        </div>
 
         
     </div>
