Adicionado links no topo e no fim

--- a/index.html
+++ b/index.html
@@ -7,19 +7,35 @@
 </head>
 <body>
     <div>
+        <ul>
+            <li><a href="foto">Minha foto</a></li>
+            <li><a href="descriçao">Descrição</a></li>
+            <li><a href="habilidades">Habilidades</a></li>
+            <li><a href="links">Links Uteis</a></li>
+        </ul>
+    </div>
+    <div>
         <h1>Rafael Germano de Paula Silva</h1>
-        <img src="./imagem/IMG_2228.JPG" alt="Minha foto" width= 200px>
-        <h2>Descrição</h2>
+        <img src="./imagem/IMG_2228.JPG" alt="Minha foto" width= 200px id="foto">
+        <h2 id="descriçao">Descrição</h2>
         <p><em>Brasileiro, nascido em Belo horizonte Minas Gerais,
              cursa Analise e Desenvolvimento de sistemas na UNA,
               e mais recentemente estudante na Trybe.<em></p>
         <div>
-            <h2>Habilidades</h2>
+            <h2 id="habilidades">Habilidades</h2>
             <ul>
                 <li><strong>Organização</strong></li>
                 <li><strong>Colaboração</strong></li>
                 <li>Comunicação assertiva</li>
             </ul>
+            <div>
+                <h2 id="links">Links Uteis</h2>
+                <ul>
+                    <li><a href="https://www.betrybe.com/" target="_blank"></a></li>
+                    <li><a href="https://github.com/" target="_blank"></a></li>
+                    
+                </ul>
+            </div>
         </div>
 
         
