--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portifólio</title>
+    <style>
+        body{
+            background-color: rgb(243, 238, 133) ;
+        }
+        h1{
+            font-family: cursive;
+        }
+        #descriçao{
+            font-family: cursive ;
+        }
+        .habilidades{
+            font-size: 17px;
+            font-style: italic;
+        }
+        a{
+            text-decoration: none;
+            color: black;
+        }
+    </style>
 </head>
 <body>
     <div>
@@ -17,15 +36,15 @@
     <div>
         <h1>Rafael Germano de Paula Silva</h1>
         <img src="./imagem/IMG_2228.JPG" alt="Minha foto" width= 200px id="foto">
-    <div id = "descriçao">    
-        <h2 >Descrição</h2>
+    <div >    
+        <h2 id = "descriçao">Descrição</h2>
         <p><em>Brasileiro, nascido em Belo horizonte Minas Gerais,
              cursa Analise e Desenvolvimento de sistemas na UNA,
               e mais recentemente estudante na Trybe.<em></p>
     </div>            
         <div id="habilidades">
             <h2 >Habilidades</h2>
-            <ul>
+            <ul class="habilidades">
                 <li><strong>Organização</strong></li>
                 <li><strong>Colaboração</strong></li>
                 <li>Comunicação assertiva</li>
