--- a/index.html
+++ b/index.html
@@ -3,44 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Meu Portifólio</title>
-    <style>
-        body{
-            background-color: rgb(243, 238, 133) ;
-        }
-        h1{
-            font-family: cursive;
-        }
-        #descriçao{
-            font-family: cursive ;
-        }
-        .habilidades{
-            font-size: 17px;
-            font-style: italic;
-        }
-        a{
-            text-decoration: none;
-            color: black;
-        }
-    </style>
+    
 </head>
 <body>
-    <div>
-        <ul>
+    <div id="lista">
+        <ul >
             <li><a href="#foto">Minha foto</a></li>
             <li><a href="#descriçao">Descrição</a></li>
             <li><a href="#habilidades">Habilidades</a></li>
             <li><a href="#links">Links Uteis</a></li>
         </ul>
     </div>
-    <div>
+    <div  id="nome">
         <h1>Rafael Germano de Paula Silva</h1>
-        <img src="./imagem/IMG_2228.JPG" alt="Minha foto" width= 200px id="foto">
-    <div >    
+
+    </div>
+    <div class="minha-descriçao">
+        <div id="image">
+            <img src="./imagem/IMG_2228.JPG" alt="Minha foto"  id="foto">
+        </div>   
+    <div >
+        
         <h2 id = "descriçao">Descrição</h2>
         <p><em>Brasileiro, nascido em Belo horizonte Minas Gerais,
              cursa Analise e Desenvolvimento de sistemas na UNA,
               e mais recentemente estudante na Trybe.<em></p>
+    </div>
     </div>            
         <div id="habilidades">
             <h2 >Habilidades</h2>
